// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clear component has proper HTML rendering 1`] = `

<button type="reset"
        class="ais-clear"
>
  <span class="ais-clear__label">
    Clear
  </span>
</button>

`;

exports[`Clear component has proper HTML rendering when disabled 1`] = `

<button type="reset"
        disabled="disabled"
        class="ais-clear ais-clear--disabled"
>
  <span class="ais-clear__label">
    Clear
  </span>
</button>

`;
